Richtext inline and component-properties in modal